--- a/src/app/reorder-list/reorder-list.component.less
+++ b/src/app/reorder-list/reorder-list.component.less
@@ -57,6 +57,10 @@
         border: 1px dotted @gray65;
         cursor: grab;
         position: relative;
+        overflow: hidden;
+        &:hover {
+          border: 1px solid @gray45;
+        }
         &.list-item-placeholder {
           position: absolute;
           background: white;
