--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,12 +1,26 @@
 @import (reference, multiple) './styles/colors.less';
 
 ::ng-deep app-reorder-list {
-  img {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    &:hover {
-      outline: 1px solid @gray45;
+  &.only-image {
+    img {
+      width: 100%;
+      height: 100%;
     }
   }
+
+  &.image-with-text {
+    .draggable-list-item {
+      // For custom cards you will need to override width + height for this class
+      width: 80px !important;
+      height: 80px !important;
+      .container {
+        text-align: center;
+        img {
+          width: 80px;
+          height: 60px;
+        }
+      }
+    }
+  }
+
 }
