texts for examples

--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,8 +1,10 @@
+p Cards with Image only
 app-reorder-list.only-image(
 [items]="listItems")
   ng-template(#listItem, let-item="item")
     img([src]="item", draggable="false")
 
+p Custom Cards with Image and text
 app-reorder-list.image-with-text(
 [items]="listItems")
   ng-template(#listItem, let-item="item", let-index="index")
