add option for non template, just use image

--- a/src/app/reorder-list/reorder-list.component.less
+++ b/src/app/reorder-list/reorder-list.component.less
@@ -58,6 +58,10 @@
         cursor: grab;
         position: relative;
         overflow: hidden;
+        .template-container {
+          width: 100%;
+          height: 100%;
+        }
         &:hover {
           border: 1px solid @gray45;
         }
