--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,12 +1,6 @@
 @import (reference, multiple) './styles/colors.less';
 
 ::ng-deep app-reorder-list {
-  &.only-image {
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
 
   &.image-with-text {
     .draggable-list-item {
@@ -20,6 +14,9 @@
           height: 60px;
         }
       }
+    }
+    .list-item-placeholder {
+      background: crimson !important;
     }
   }
 
