--- a/src/app/reorder-list/reorder-list.component.less
+++ b/src/app/reorder-list/reorder-list.component.less
@@ -62,6 +62,10 @@
           width: 100%;
           height: 100%;
         }
+        img {
+          width: 100%;
+          height: 100%;
+        }
         &:hover {
           border: 1px solid @gray45;
         }
