--- a/src/app/reorder-list/reorder-list.component.less
+++ b/src/app/reorder-list/reorder-list.component.less
@@ -30,9 +30,6 @@
     .list-item {
       padding: @list-item-padding;
       position: relative;
-      .top {
-        display: flex;
-      }
       .index {
         justify-content: center;
         display: flex;
@@ -77,20 +74,9 @@
           background: @gray90;
           border: 1px solid @gray45;
         }
-        &.move-right {
-          transition: transform 350ms cubic-bezier(0, 0, 0.2, 1);
+        &.move-up, &.move-down, &.move-right, &.move-left {
           z-index: 10;
-        }
-        &.move-left {
-          transition: transform 350ms cubic-bezier(0, 0, 0.2, 1);
-        }
-        &.move-down {
-          z-index: 9;
-          transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-        }
-        &.move-up {
-          z-index: 9;
-          transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+          transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
         }
         &.currently-dragged {
           transform: translateX(-9999px); // makes the original dragged item hidden while dragging
